# easymaster-phonica

./: CMakeLists.txt  PluginEditor.cpp  README.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Audio/Analysis/: SampleAnalysis.h
Source/Audio/DrumEngine/: DrumSynth.cpp  DrumSynth.h  DrumVoice.cpp  DrumVoice.h
Source/Audio/FX/: ArpEngine.h  DuckEngine.h  FDNReverb.h  HarmonyGenerator.h  LFOEngine.h  MSEGEngine.h  MasterPultecEQ.h  MultiModelFilter.h  Oversampler.h  ReverbAlgos.h  TimeStretch.h
Source/Audio/SynthEngine/: AnalogVoice.cpp  AnalogVoice.h  ElementsVoice.h  FM4OpVoice.h  GranularVoice.h  PlaitsVoice.h  SamplerVoice.h  SynthEngine.h  SynthPart.h  WavetableVoice.h
Source/Sequencer/: ScaleUtils.h  SequencerEngine.cpp  SequencerEngine.h  StepData.h  TrackState.h
Source/State/: GrooveBoxState.cpp  GrooveBoxState.h  MacroEngine.h  PresetManager.h  SeqUndoManager.h
Source/UI/: Colours.h
Source/UI/Components/: ArpEditor.h  DrumTrackRow.cpp  DrumTrackRow.h  EngineIcons.h  HeaderBar.h  KnobComponent.h  LEDMeter.cpp  LEDMeter.h  MSEGEditor.h  MasterFXRow.h  PianoKeyboard.cpp  PianoKeyboard.h  RatchetRow.cpp  RatchetRow.h  StepButton.cpp  StepButton.h  StepGrid.cpp  StepGrid.h  SynthTrackRow.cpp  SynthTrackRow.h  WaveformOverlay.h  WavetableEditor.h
Source/UI/LookAndFeel/: GrooveBoxLookAndFeel.cpp  GrooveBoxLookAndFeel.h
easymaster-v12-bigfix/Source/: PluginEditor.cpp
easymaster-v12-transient-v3/Source/: PluginProcessor.cpp  PluginProcessor.h
